[SGH-111] Fixed carousel size. Fixed thumbnail container on small screens.

--- a/src/main/webapp/src/app/product/product-details/product-details.component.scss
+++ b/src/main/webapp/src/app/product/product-details/product-details.component.scss
@@ -164,6 +164,7 @@ $map-height: 500px;
                     overflow-y: auto;
                     opacity: 0.5;
                     margin-right: 5%;
+                    flex-shrink: 0;
 
                     @media(max-width: $breakpoint-large) {
                         flex-direction: row;
@@ -207,7 +208,8 @@ $map-height: 500px;
                 .ngb-carousel {
                     flex-grow: 1;
                     flex-shrink: 1;
-                    max-width: calc(100% - 100px - 5%);
+                    min-width: calc(100% - 100px - 10%);
+                    max-width: 800px;
                     height: 60%;
 
                     @media (max-width: $breakpoint-large) {
@@ -256,7 +258,7 @@ $map-height: 500px;
                 .carousel-item {
                     flex: 0 0 auto;
                     scroll-snap-align: start;
-                    width: 800px;
+                    max-width: 800px;
                     height: 90%;
                     background-color: $color-neutral-1;
                     border: $border;
